[package]
name = "x3dh"
version = "0.1.0"
edition = "2024"

[dependencies]
chacha20poly1305 = "0.10.1"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
hex = "0.4.3"
hkdf = "0.13.0"
rand_core = {version = "0.6", features = ["getrandom"] }
sha2 = "0.11.0"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
